Fix title align

--- a/src/pages/Pokemon/Pokemon.scss
+++ b/src/pages/Pokemon/Pokemon.scss
@@ -39,7 +39,7 @@
 
       .PokemonCard {
         max-width: 250px;
-        min-height: 15vh;
+        height: 16vh;
         align-items: center;
 
         .PokemonCard-name {
